--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/three": "^0.178.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "lucide-react": "^0.536.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "three": "^0.179.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
