--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.10",
     "three": "^0.179.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
